--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.mustache.suffix=.html
 spring.thymeleaf.cache=false
 spring.mustache.check-template-location=false
+spring.h2.console.enabled=true
