--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,11 @@
 spring.mustache.suffix=.html
 spring.thymeleaf.cache=false
 spring.mustache.check-template-location=false
-spring.h2.console.enabled=true
+#spring.h2.console.enabled=true
+spring.datasource.url=jdbc:mysql://localhost:3306/mysql_database_gimnasio?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto = none
